@@ -25,7 +25,12 @@ from bzrlib.commands import Command, register_command
 from bzrlib.option import Option
 from bzrlib.workingtree import WorkingTree
 
-from builder import DebBuild, DebMergeBuild, DebNativeBuild, DebSplitBuild
+from builder import (DebBuild,
+                     DebMergeBuild,
+                     DebNativeBuild,
+                     DebSplitBuild,
+                     DebMergeExportUpstreamBuild,
+                     )
 from config import DebBuildConfig
 from errors import NotInBaseError, ChangedError, DebianError
 from bdlogging import debug, info, set_verbose
@@ -49,6 +54,9 @@ native_opt = Option('native',
     help="Build a native package")
 split_opt = Option('split',
     help="Automatically create an .orig.tar.gz from a full source branch")
+export_upstream_opt = Option('export-upstream',
+    help="Create the .orig.tar.gz from a bzr branch before building",
+    type=unicode)
 
 
 class cmd_builddeb(Command):
@@ -117,13 +125,15 @@ class cmd_builddeb(Command):
   takes_options = ['verbose', working_tree_opt, export_only_opt,
       dont_purge_opt, use_existing_opt, result_opt, builder_opt, merge_opt,
       build_dir_opt, orig_dir_opt, ignore_changes_opt, ignore_unknowns_opt,
-      quick_opt, reuse_opt, native_opt, split_opt]
+      quick_opt, reuse_opt, native_opt, split_opt, export_upstream_opt]
 
   def run(self, branch=None, verbose=False, working_tree=False,
           export_only=False, dont_purge=False, use_existing=False,
           result=None, builder=None, merge=False, build_dir=None,
           orig_dir=None, ignore_changes=False, ignore_unknowns=False,
-          quick=False, reuse=False, native=False, split=False):
+          quick=False, reuse=False, native=False, split=False,
+          export_upstream=None):
+
     retcode = 0
 
     set_verbose(verbose)
@@ -144,6 +154,8 @@ class cmd_builddeb(Command):
 
     if merge:
       info("Running in merge mode")
+      if export_upstream is None:
+        export_upstream = config.export_upstream()
     else:
       if not native:
         native = config.native()
@@ -205,7 +217,10 @@ class cmd_builddeb(Command):
     properties = BuildProperties(changelog,build_dir,orig_dir,larstiq)
 
     if merge:
-      build = DebMergeBuild(properties, t)
+      if export_upstream is None:
+        build = DebMergeBuild(properties, t)
+      else:
+        build = DebMergeExportUpstreamBuild(properties, t, export_upstream)
     elif native:
       build = DebNativeBuild(properties, t)
     elif split:
